--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/comparison"
-                android:textSize="14dp" />
+                android:textSize="14dp"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/tv_comparison"
@@ -32,7 +33,8 @@
                 android:background="#22999999"
                 android:padding="12dp"
                 android:text="@string/poem_0"
-                android:textSize="12dp" />
+                android:textSize="12dp"
+                android:visibility="gone"/>
 
             <cn.carbs.android.expandabletextview.library.ExpandableTextView
                 android:id="@+id/etv"
@@ -43,7 +45,14 @@
                 android:background="#22999999"
                 android:padding="12dp"
                 android:text="@string/poem_0"
-                android:textSize="12dp" />
+                android:textSize="12dp"
+                android:visibility="gone"/>
+
+            <cn.carbs.android.expandabletextview.library.SpExpandTextView
+                android:id="@+id/sp_etv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/etv"/>
 
             <TextView
                 android:layout_width="wrap_content"
